RESOLVED FIXED158155
Regression(r200972): Webcore::Range::collectSelectionsRects() asserts in startContainer() while selecting text.
https://bugs.webkit.org/show_bug.cgi?id=158155
Summary Regression(r200972): Webcore::Range::collectSelectionsRects() asserts in star...
alan
Reported 2016-05-27 09:46:45 PDT
1. Load j-archive.com 2. Start selecting text. -> assert()
Attachments
Patch (2.14 KB, patch)
2016-05-27 09:56 PDT, alan
cdumez: review+
alan
Comment 1 2016-05-27 09:47:53 PDT
alan
Comment 2 2016-05-27 09:56:46 PDT
Chris Dumez
Comment 3 2016-05-27 09:59:49 PDT
Comment on attachment 279966 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=279966&action=review r=me > Source/WebKit2/ChangeLog:3 > + Webcore::Range::collectSelectionsRects() asserts in startContainer() while selecting text. I think we should indicate which revision regressed it in the title (since we know and it is recent). > Source/WebKit2/ChangeLog:10 > + * WebProcess/WebPage/ios/WebPageIOS.mm: I understand we need to land this quickly but we really need to land a test case in a follow-up.
alan
Comment 4 2016-05-27 10:08:06 PDT
Note You need to log in before you can comment on or make changes to this bug.