Regression(r200972): Webcore::Range::collectSelectionsRects() asserts in startContainer() while selecting text. https://bugs.webkit.org/show_bug.cgi?id=158155 <rdar://problem/26502712>

Reviewed by Chris Dumez.

This patch ensures that we still have a valid paragraphRange after returning from enclosingTextUnitOfGranularity().

* WebProcess/WebPage/ios/WebPageIOS.mm:
(WebKit::WebPage::selectTextWithGranularityAtPoint):

Canonical link: https://commits.webkit.org/176256@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@201453 268f45cc-cd09-0410-ab3c-d52691b4dbfc